https://github.com/GDI-HE/dashboard/issues/35 licences removed, text central aligned

--- a/dashboard/static/css/check_abstracts.css
+++ b/dashboard/static/css/check_abstracts.css
@@ -103,7 +103,7 @@ margin-left: 260px;
 }
 th, td {
     padding: 12px;
-    text-align: left;
+    text-align: center !important; /* Center-align header and cell content */
     border-bottom: 1px solid #ddd;
 }
 th {
